--- a/CalculatorWebAdventure/Pages/Calculator.cshtml
+++ b/CalculatorWebAdventure/Pages/Calculator.cshtml
@@ -1,8 +1,8 @@
 @page
-@model CalculatorAdventure.Pages.CalculatorModel
+@model CalculatorWebAdventure.Pages.CalculatorModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<h2>Calculator</h2>
+<h2>Web Calculator</h2>
 
 <form method="post">
     <input type="number" asp-for="Number1" required />
